@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,22 +20,10 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package jdk.jfr.event.gc.stacktrace;
 
-/**
- * @test
- * @key jfr
- * @requires vm.hasJFR
- *
- * @requires vm.gc == "null" | vm.gc == "G1"
- * @library /test/lib /test/jdk
- * @run main/othervm -XX:MaxNewSize=10M -Xmx128M -XX:+UseG1GC -Xlog:gc*
- *                   -XX:FlightRecorderOptions:stackdepth=256
- *                   jdk.jfr.event.gc.stacktrace.TestG1OldAllocationPendingStackTrace
- */
-public class TestG1OldAllocationPendingStackTrace {
+package pkg;
 
-    public static void main(String[] args) throws Exception {
-        AllocationStackTrace.testG1OldAllocEvent();
+public class CtorTypeParam {
+    public <T extends Runnable> CtorTypeParam() {
     }
 }
